--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -544,52 +544,44 @@ document.querySelectorAll('.footer a').forEach(link => {
 function getTurnForDate(task, selectedDateStr) {
     const userOrder = [...task.users];
     const selectedDate = new Date(selectedDateStr);
-    const today = new Date();
-    today.setHours(0, 0, 0, 0);
+    
+    let repeatLimit = 1;
+    if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
+    if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+    if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+    // Sort all dates in order
+    const dateKeys = Object.keys(task.completions || {}).sort();
+    let simulatedCompletions = 0;
 
-    const startDate = new Date(task.date.split(" to ")[0]);
-    let currentTurnIndex = 0;
-
-    let d = new Date(startDate);
+    const taskStartDate = new Date(task.date.split(" to ")[0]);
+    let d = new Date(taskStartDate);
 
     while (d <= selectedDate) {
         const dateKey = d.toISOString().split("T")[0];
-        const isPastOrToday = d <= today;
+        let completionsForDate = 0;
 
-        const completions = task.completions?.[dateKey] || [];
-
-        if (d.getTime() === selectedDate.getTime()) {
-            // For selected date, return the currentTurnIndex user
-            return userOrder[currentTurnIndex];
-        }
-
-        if (isPastOrToday) {
-            // Real days — only advance if actually completed
-            if (completions.length >= repeatLimit) {
-                currentTurnIndex = (currentTurnIndex + 1) % userOrder.length;
-            }
+        if (task.completions?.[dateKey]) {
+            completionsForDate = task.completions[dateKey].length;
+        } else if (d < new Date()) {
+            // No completions recorded for past days — assume none
+            completionsForDate = 0;
         } else {
-            // Future simulation — advance turn only if yesterday was fully completed
-            const prevDate = new Date(d);
-            prevDate.setDate(prevDate.getDate() - 1);
-            const prevKey = prevDate.toISOString().split("T")[0];
-            const prevCompletions = task.completions?.[prevKey] || [];
-
-            if (prevCompletions.length >= repeatLimit) {
-                currentTurnIndex = (currentTurnIndex + 1) % userOrder.length;
-            }
+            // Future date — assume full completion
+            completionsForDate = repeatLimit;
         }
 
+        simulatedCompletions += completionsForDate;
+
+        // Move to next day
         d.setDate(d.getDate() + 1);
     }
 
-    // fallback
-    return userOrder[currentTurnIndex];
+    const turnIndex = simulatedCompletions % userOrder.length;
+    return userOrder[turnIndex];
 }
+
+
 
 
 
