--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -541,49 +541,46 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
+
+
+
+
 function getTurnForDate(task, selectedDateStr) {
     const userOrder = [...task.users];
     const selectedDate = new Date(selectedDateStr);
-    
+    const startDate = new Date(task.date.split(" to ")[0]);
+
     let repeatLimit = 1;
     if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
-    if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
-    if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
+    else if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+    else if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-    // Sort all dates in order
-    const dateKeys = Object.keys(task.completions || {}).sort();
-    let simulatedCompletions = 0;
+    // Helper to format date as YYYY-MM-DD
+    const formatDate = d => d.toISOString().split("T")[0];
 
-    const taskStartDate = new Date(task.date.split(" to ")[0]);
-    let d = new Date(taskStartDate);
+    let currentTurn = task.users[0]; // fallback
+    if (task.turn) currentTurn = task.turn;
 
+    let currentIndex = userOrder.indexOf(currentTurn);
+    if (currentIndex === -1) currentIndex = 0;
+
+    const completions = task.completions || {};
+
+    let d = new Date(startDate);
     while (d <= selectedDate) {
-        const dateKey = d.toISOString().split("T")[0];
-        let completionsForDate = 0;
+        const dateStr = formatDate(d);
+        const completedUsers = Array.isArray(completions[dateStr]) ? completions[dateStr] : [];
 
-        if (task.completions?.[dateKey]) {
-            completionsForDate = task.completions[dateKey].length;
-        } else if (d < new Date()) {
-            // No completions recorded for past days — assume none
-            completionsForDate = 0;
-        } else {
-            // Future date — assume full completion
-            completionsForDate = repeatLimit;
+        if (completedUsers.length >= repeatLimit) {
+            // Rotate turn forward
+            currentIndex = (currentIndex + 1) % userOrder.length;
         }
 
-        simulatedCompletions += completionsForDate;
-
-        // Move to next day
         d.setDate(d.getDate() + 1);
     }
 
-    const turnIndex = simulatedCompletions % userOrder.length;
-    return userOrder[turnIndex];
+    return userOrder[currentIndex];
 }
-
-
-
-
 
 
 
