--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -552,42 +552,66 @@ document.querySelectorAll('.footer a').forEach(link => {
 function getTurnForDate(task, selectedDateStr) {
     const userOrder = [...task.users];
     const selectedDate = new Date(selectedDateStr);
-    const startDate = new Date(task.date.split(" to ")[0]);
-    const formatDate = d => d.toISOString().split("T")[0];
-    const todayStr = formatDate(new Date());
+    const today = new Date();
+    today.setHours(0, 0, 0, 0); // Normalize to start of day
 
     let repeatLimit = 1;
     if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
-    else if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
-    else if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
+    if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+    if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-    // ✅ If it's today and task.turnByDate exists, return it
-    if (selectedDateStr === todayStr && task.turnByDate?.[todayStr]) {
-        return task.turnByDate[todayStr];
-    }
+    // Initialize variables
+    let simulatedCompletions = 0;
+    let lastTurn = userOrder[0]; // Default to first user
 
-    // 🧠 Otherwise simulate history to find current turn
-    let currentTurn = task.turn || userOrder[0];
-    let currentIndex = userOrder.indexOf(currentTurn);
-    if (currentIndex === -1) currentIndex = 0;
+    // Get task start date
+    const taskStartDate = new Date(task.date.split(" to ")[0]);
+    taskStartDate.setHours(0, 0, 0, 0);
 
-    const completions = task.completions || {};
-    let d = new Date(startDate);
+    // Sort all completion dates
+    const dateKeys = Object.keys(task.completions || {}).sort();
+    
+    // Iterate from task start date to selected date
+    let d = new Date(taskStartDate);
+    d.setHours(0, 0, 0, 0);
 
-    while (formatDate(d) < selectedDateStr) {
-        const dateStr = formatDate(d);
-        const completedUsers = Array.isArray(completions[dateStr]) ? completions[dateStr] : [];
+    while (d <= selectedDate) {
+        const dateKey = d.toISOString().split("T")[0];
+        let completionsForDate = 0;
 
-        if (completedUsers.length >= repeatLimit) {
-            currentIndex = (currentIndex + 1) % userOrder.length;
+        // Check if there are recorded completions
+        if (task.completions?.[dateKey]) {
+            completionsForDate = task.completions[dateKey].length;
+            // Update lastTurn based on completions
+            if (completionsForDate > 0) {
+                // Move turn forward by the number of completions
+                const currentIndex = userOrder.indexOf(lastTurn);
+                const newIndex = (currentIndex + completionsForDate) % userOrder.length;
+                lastTurn = userOrder[newIndex];
+            }
+        } else if (d > today) {
+            // For future dates, no new completions; keep lastTurn
+            completionsForDate = 0;
+        } else {
+            // For past/current dates with no completions, assume none
+            completionsForDate = 0;
         }
 
+        simulatedCompletions += completionsForDate;
+
+        // Move to next day
         d.setDate(d.getDate() + 1);
     }
 
-    return userOrder[currentIndex];
-}
+    // For future dates, return the last calculated turn
+    if (selectedDate > today) {
+        return lastTurn;
+    }
 
+    // For past/current dates, calculate turn based on total completions
+    const turnIndex = simulatedCompletions % userOrder.length;
+    return userOrder[turnIndex];
+}
 
 
 
