--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -549,69 +549,54 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
+// Replace this function:
 function getTurnForDate(task, selectedDateStr) {
     const userOrder = [...task.users];
     const selectedDate = new Date(selectedDateStr);
-    const today = new Date();
-    today.setHours(0, 0, 0, 0); // Normalize to start of day
-
+    
     let repeatLimit = 1;
     if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
     if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
     if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-    // Initialize variables
-    let simulatedCompletions = 0;
-    let lastTurn = userOrder[0]; // Default to first user
+    const completions = task.completions || {};
+    const formatDate = (d) => d.toISOString().split("T")[0];
+    const startDate = new Date(task.date.split(" to ")[0]);
+    const todayStr = formatDate(new Date());
 
-    // Get task start date
-    const taskStartDate = new Date(task.date.split(" to ")[0]);
-    taskStartDate.setHours(0, 0, 0, 0);
+    let currentIndex = task.users.indexOf(task.turn || task.users[0]);
+    if (currentIndex === -1) currentIndex = 0;
 
-    // Sort all completion dates
-    const dateKeys = Object.keys(task.completions || {}).sort();
-    
-    // Iterate from task start date to selected date
-    let d = new Date(taskStartDate);
-    d.setHours(0, 0, 0, 0);
-
+    let d = new Date(startDate);
     while (d <= selectedDate) {
-        const dateKey = d.toISOString().split("T")[0];
-        let completionsForDate = 0;
+        const dateStr = formatDate(d);
 
-        // Check if there are recorded completions
-        if (task.completions?.[dateKey]) {
-            completionsForDate = task.completions[dateKey].length;
-            // Update lastTurn based on completions
-            if (completionsForDate > 0) {
-                // Move turn forward by the number of completions
-                const currentIndex = userOrder.indexOf(lastTurn);
-                const newIndex = (currentIndex + completionsForDate) % userOrder.length;
-                lastTurn = userOrder[newIndex];
-            }
-        } else if (d > today) {
-            // For future dates, no new completions; keep lastTurn
-            completionsForDate = 0;
-        } else {
-            // For past/current dates with no completions, assume none
-            completionsForDate = 0;
+        // Check if a fixed override turn was stored (e.g. from a delegation or correction)
+        if (task.turnByDate && task.turnByDate[dateStr]) {
+            currentIndex = task.users.indexOf(task.turnByDate[dateStr]);
+            if (currentIndex === -1) currentIndex = 0;
         }
 
-        simulatedCompletions += completionsForDate;
+        // Only simulate completions for days before the selected one
+        if (dateStr < selectedDateStr) {
+            const completedUsers = Array.isArray(completions[dateStr]) ? completions[dateStr] : [];
+            const realCompletions = completedUsers.length;
+            const rotations = Math.floor(realCompletions / repeatLimit);
+            currentIndex = (currentIndex + rotations) % task.users.length;
+        }
 
-        // Move to next day
         d.setDate(d.getDate() + 1);
     }
 
-    // For future dates, return the last calculated turn
-    if (selectedDate > today) {
-        return lastTurn;
+    // For the selected date: respect turnByDate if set
+    if (task.turnByDate && task.turnByDate[selectedDateStr]) {
+        return task.turnByDate[selectedDateStr];
     }
 
-    // For past/current dates, calculate turn based on total completions
-    const turnIndex = simulatedCompletions % userOrder.length;
-    return userOrder[turnIndex];
+    // Otherwise, simulate current day's turn based on previous date
+    return task.users[currentIndex];
 }
+
 
 
 
