--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -564,52 +564,52 @@ function getTurnForDate(task, selectedDateStr) {
     if (currentIndex === -1) currentIndex = 0;
 
     const d = new Date(startDate);
-
-    let previousDateStr = null;
+    let previousTurn = currentIndex;
+    let activeDayTurn = currentIndex;
+    let activeDayStr = null;
 
     while (d <= selectedDate) {
         const dStr = formatDate(d);
 
-        // Check if a fixed turn is already stored
         if (turnByDate[dStr]) {
-            currentIndex = task.users.indexOf(turnByDate[dStr]);
+            currentIndex = userOrder.indexOf(turnByDate[dStr]);
         } else {
             const completionsToday = Array.isArray(completions[dStr]) ? completions[dStr] : [];
 
             if (dStr < selectedDateStr) {
-                // 💡 For days BEFORE selected day: simulate rotation
+                // Simulate normal past day rotation
                 for (const user of completionsToday) {
                     if (userOrder.includes(user)) {
                         currentIndex = (currentIndex + 1) % userOrder.length;
                     }
                 }
+                previousTurn = currentIndex;
             } else if (dStr === selectedDateStr) {
-                // 💡 This is the selected day (Active Day)
-                if (completionsToday.length === 0 && previousDateStr) {
-                    // No completions yet — use YESTERDAY’S turn
-                    if (turnByDate[previousDateStr]) {
-                        currentIndex = userOrder.indexOf(turnByDate[previousDateStr]);
-                    }
-                } else {
-                    // Simulate rotation for today so far
-                    for (const user of completionsToday) {
-                        if (userOrder.includes(user)) {
-                            currentIndex = (currentIndex + 1) % userOrder.length;
-                        }
+                // 🔥 Handle Active Day
+                const isToday = dStr === formatDate(new Date());
+
+                if (completionsToday.length === 0 && !isToday) {
+                    // No completions and not today (future): use Active Day final turn
+                    return userOrder[activeDayTurn];
+                }
+
+                for (const user of completionsToday) {
+                    if (userOrder.includes(user)) {
+                        currentIndex = (currentIndex + 1) % userOrder.length;
                     }
                 }
+
+                // Remember Active Day result
+                activeDayTurn = currentIndex;
+                activeDayStr = dStr;
             }
         }
 
-        previousDateStr = dStr;
         d.setDate(d.getDate() + 1);
     }
 
-    // 🔒 Lock in the final result (for Date 15+)
-    const finalDateStr = formatDate(selectedDate);
     return userOrder[currentIndex];
 }
-
 
 
 
