--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -547,27 +547,41 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-
 function getTurnForDate(task, selectedDateStr) {
+    const todayStr = new Date().toISOString().split("T")[0];
+    const selectedStr = new Date(selectedDateStr).toISOString().split("T")[0];
+
+    if (selectedStr === todayStr) {
+        const yesterdayTurn = getTurnForYesterday(task);
+        return getTurnForPastOrToday(task, selectedStr, yesterdayTurn);
+    }
+
+    if (selectedStr > todayStr) {
+        return getTurnForTomorrow(task);
+    }
+
+    return getTurnForPastOrToday(task, selectedStr);
+}
+
+
+
+
+
+
+function getTurnForPastOrToday(task, selectedStr, initialTurn = null) {
     const formatDate = (d) => d.toISOString().split("T")[0];
     const userOrder = [...task.users];
-    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-
     const completions = task.completions || {};
     const turnByDate = task.turnByDate || {};
-    const startDate = new Date(task.date.split(" to ")[0]);
-    const selectedDate = new Date(selectedDateStr);
-    const today = new Date();
-    const todayStr = formatDate(today);
-    const selectedStr = formatDate(selectedDate);
 
-    let currentIndex = task.users.indexOf(task.turn || task.users[0]);
+    const startDate = new Date(task.date.split(" to ")[0]);
+    const selectedDate = new Date(selectedStr);
+    let currentIndex = initialTurn !== null
+        ? userOrder.indexOf(initialTurn)
+        : userOrder.indexOf(task.turn || userOrder[0]);
     if (currentIndex === -1) currentIndex = 0;
 
     const d = new Date(startDate);
-    let lastSimulatedIndex = currentIndex;
 
     while (d <= selectedDate) {
         const dStr = formatDate(d);
@@ -575,30 +589,13 @@ function getTurnForDate(task, selectedDateStr) {
         if (turnByDate[dStr]) {
             currentIndex = userOrder.indexOf(turnByDate[dStr]);
         } else {
-            let completionsToday = Array.isArray(completions[dStr]) ? completions[dStr] : [];
+            const completionsToday = Array.isArray(completions[dStr]) ? completions[dStr] : [];
 
-            // 🔮 Simulate perfect completions for future dates (until they become "today")
-            if (dStr > todayStr) {
-                return userOrder[lastSimulatedIndex];
-            }
-
-            // ✅ Use simulated perfect completions for days < today
-            if (dStr < todayStr && completionsToday.length < repeatLimit) {
-                // Simulate perfect completions in order
-                for (let i = 0; i < repeatLimit; i++) {
+            for (const user of completionsToday) {
+                if (userOrder.includes(user)) {
                     currentIndex = (currentIndex + 1) % userOrder.length;
                 }
-            } else {
-                // Use real completions
-                for (const user of completionsToday) {
-                    if (userOrder.includes(user)) {
-                        currentIndex = (currentIndex + 1) % userOrder.length;
-                    }
-                }
             }
-
-            // Remember latest completed index
-            lastSimulatedIndex = currentIndex;
         }
 
         d.setDate(d.getDate() + 1);
@@ -610,10 +607,37 @@ function getTurnForDate(task, selectedDateStr) {
 
 
 
+function getTurnForYesterday(task) {
+    const formatDate = (d) => d.toISOString().split("T")[0];
+    const yesterday = new Date();
+    yesterday.setDate(yesterday.getDate() - 1);
+    const yesterdayStr = formatDate(yesterday);
+
+    return getTurnForPastOrToday(task, yesterdayStr);
+}
 
 
 
 
+
+
+function getTurnForTomorrow(task) {
+    const userOrder = [...task.users];
+    const yesterdayTurn = getTurnForYesterday(task);
+    let currentIndex = userOrder.indexOf(yesterdayTurn);
+    if (currentIndex === -1) currentIndex = 0;
+
+    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
+    // Simulate perfect completions
+    for (let i = 0; i < repeatLimit; i++) {
+        currentIndex = (currentIndex + 1) % userOrder.length;
+    }
+
+    return userOrder[currentIndex];
+}
 
 
 
