--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -542,6 +542,15 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
+function isDayComplete(task, dateStr) {
+    const completions = task.completions?.[dateStr] || [];
+    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+    return completions.length >= repeatLimit;
+}
+
+
 
 
 
@@ -550,16 +559,23 @@ function getTurnForDate(task, selectedDateStr) {
     const todayStr = new Date().toISOString().split("T")[0];
     const selectedStr = new Date(selectedDateStr).toISOString().split("T")[0];
 
+    if (selectedStr < todayStr) {
+        const yesterdayTurn = getTurnForYesterday(task);
+        return getTurnForPastOrToday(task, selectedStr, yesterdayTurn);
+    }
+
     if (selectedStr === todayStr) {
         const yesterdayTurn = getTurnForYesterday(task);
         return getTurnForPastOrToday(task, selectedStr, yesterdayTurn);
     }
 
-    if (selectedStr > todayStr) {
-        return getTurnForFutureDate(task, selectedStr);
+    // ➕ NEW: If today isn't done, freeze future to today
+    if (!isDayComplete(task, todayStr)) {
+        return getTurnForPastOrToday(task, todayStr);
     }
 
-    return getTurnForPastOrToday(task, selectedStr);
+    // ✅ Now simulate future dates
+    return getTurnForFutureDate(task, selectedStr);
 }
 
 
