--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -668,25 +668,41 @@ function getTurnForFutureDate(task, futureStr) {
 
     const today = new Date();
     const futureDate = new Date(futureStr);
-    const startDate = new Date(today);
+    let currentDate = new Date(today);
+    currentDate.setDate(currentDate.getDate() + 1); // start simulating from tomorrow
 
     const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-    let currentIndex = userOrder.indexOf(getTurnForYesterday(task));
+    let currentTurn = getTurnForDate(task, formatDate(today));
+    let currentIndex = userOrder.indexOf(currentTurn);
     if (currentIndex === -1) currentIndex = 0;
 
-    const d = new Date(startDate);
-    while (d <= futureDate) {
-        for (let i = 0; i < repeatLimit; i++) {
-            currentIndex = (currentIndex + 1) % userOrder.length;
+    while (currentDate <= futureDate) {
+        const dStr = formatDate(currentDate);
+
+        if (turnByDate[dStr]) {
+            currentIndex = userOrder.indexOf(turnByDate[dStr]);
+        } else if (Array.isArray(completions[dStr])) {
+            for (const user of completions[dStr]) {
+                if (userOrder.includes(user)) {
+                    currentIndex = (currentIndex + 1) % userOrder.length;
+                }
+            }
+        } else {
+            // Simulate perfect completions
+            for (let i = 0; i < repeatLimit; i++) {
+                currentIndex = (currentIndex + 1) % userOrder.length;
+            }
         }
-        d.setDate(d.getDate() + 1);
+
+        currentDate.setDate(currentDate.getDate() + 1);
     }
 
     return userOrder[currentIndex];
 }
+
 
 
 
