--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -542,15 +542,6 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-function isDayComplete(task, dateStr) {
-    const completions = task.completions?.[dateStr] || [];
-    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-    return completions.length >= repeatLimit;
-}
-
-
 
 
 
@@ -559,23 +550,16 @@ function getTurnForDate(task, selectedDateStr) {
     const todayStr = new Date().toISOString().split("T")[0];
     const selectedStr = new Date(selectedDateStr).toISOString().split("T")[0];
 
-    if (selectedStr < todayStr) {
-        const yesterdayTurn = getTurnForYesterday(task);
-        return getTurnForPastOrToday(task, selectedStr, yesterdayTurn);
+    if (selectedStr === todayStr || selectedStr > todayStr) {
+    const yesterdayTurn = getTurnForYesterday(task);
+    return getTurnForPastOrToday(task, selectedStr, yesterdayTurn);
+}
+
+    if (selectedStr > todayStr) {
+        return getTurnForFutureDate(task, selectedStr);
     }
 
-    if (selectedStr === todayStr) {
-        const yesterdayTurn = getTurnForYesterday(task);
-        return getTurnForPastOrToday(task, selectedStr, yesterdayTurn);
-    }
-
-    // ➕ NEW: If today isn't done, freeze future to today
-    if (!isDayComplete(task, todayStr)) {
-        return getTurnForPastOrToday(task, todayStr);
-    }
-
-    // ✅ Now simulate future dates
-    return getTurnForFutureDate(task, selectedStr);
+    return getTurnForPastOrToday(task, selectedStr);
 }
 
 
@@ -668,41 +652,25 @@ function getTurnForFutureDate(task, futureStr) {
 
     const today = new Date();
     const futureDate = new Date(futureStr);
-    let currentDate = new Date(today);
-    currentDate.setDate(currentDate.getDate() + 1); // start simulating from tomorrow
+    const startDate = new Date(today);
 
     const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-    let currentTurn = getTurnForDate(task, formatDate(today));
-    let currentIndex = userOrder.indexOf(currentTurn);
+    let currentIndex = userOrder.indexOf(getTurnForYesterday(task));
     if (currentIndex === -1) currentIndex = 0;
 
-    while (currentDate <= futureDate) {
-        const dStr = formatDate(currentDate);
-
-        if (turnByDate[dStr]) {
-            currentIndex = userOrder.indexOf(turnByDate[dStr]);
-        } else if (Array.isArray(completions[dStr])) {
-            for (const user of completions[dStr]) {
-                if (userOrder.includes(user)) {
-                    currentIndex = (currentIndex + 1) % userOrder.length;
-                }
-            }
-        } else {
-            // Simulate perfect completions
-            for (let i = 0; i < repeatLimit; i++) {
-                currentIndex = (currentIndex + 1) % userOrder.length;
-            }
+    const d = new Date(startDate);
+    while (d <= futureDate) {
+        for (let i = 0; i < repeatLimit; i++) {
+            currentIndex = (currentIndex + 1) % userOrder.length;
         }
-
-        currentDate.setDate(currentDate.getDate() + 1);
+        d.setDate(d.getDate() + 1);
     }
 
     return userOrder[currentIndex];
 }
-
 
 
 
